# echolens

./: .gitignore  ARCHITECTURE.md  DEPLOY.md  ENV_SETUP.md  PRD.md  README.md  ROADMAP.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
backend/echolens/: __init__.py  auth.py  backlog.py  brain.py  brief.py  calibration.py  chat.py  cli.py  config.py  exporting.py  feedback.py  feedback_graph.py  fixwatch.py  impact.py  logging.py  notify.py  patterns.py  portfolio.py  review.py  textkit.py  themes.py  timeutil.py  vocab.py
backend/echolens/api/: app.py
backend/echolens/collectors/: app_store.py  base.py  github.py  play_store.py  registry.py  scheduler.py
backend/echolens/db/: migrate.py  models.py  session.py
backend/echolens/detector/: detect.py
backend/echolens/eval/: __init__.py  harness.py
backend/echolens/importers/: __init__.py  csv_reviews.py  feedback_csv.py
backend/echolens/integrations/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_adaptive_budget.py  test_api.py  test_audit.py  test_auth.py  test_collectors.py  test_detector.py  test_eval.py  test_fixes.py  test_golden.py  test_guards.py  test_hardening.py  test_orchestrator.py  test_recommender.py  test_review.py  test_review_fixes.py  test_semantic.py  test_sources_v71.py  test_tools.py  test_v10_feedback_graph.py  test_v10_themes_queue.py  test_v11_backlog.py  test_v12_brain.py  test_v2_agent.py  test_v2_tools.py  test_v3.py  test_v4.py  test_v5.py  test_v6.py  test_v7.py  test_v8_eval_scoped.py  test_v8_scoping.py  test_v9_portfolio.py
(+73 files in other folders)
