[project]
name = "echolens"
version = "0.1.0"
description = "EchoLens — agentic product-feedback investigation system"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "openai>=1.40",
    "sqlalchemy>=2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "rich>=13.7",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    # v1.0
    "google-play-scraper>=1.2",
    "apscheduler>=3.10",
    "structlog>=24.1",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    # v4.0: Slack interactivity posts form-encoded payloads (request.form())
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# real semantic embeddings (heavy; hashing fallback works without this)
embeddings = ["sentence-transformers>=2.2"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["echolens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
